# PneumaticPaddleShifting

./: .gitignore  README.md  shiftCode  stateClasses.cpp
.github/workflows/: ci_build.yaml
Firmware/Shifter_System/: .cproject  .mxproject  .project  Shifter_System.ioc  Shifter_System.launch
Firmware/Shifter_System/Core/Inc/: stm32f4xx_it.h
Firmware/Shifter_System/Core/Src/: can.c  main.c  stm32f4xx_it.c
Firmware/Shifter_System/Program/Src/: app.cpp
Firmware/Shifter_System/Program/Src/Application/ShiftController/: shift_controller.cpp  shift_controller.hpp
Firmware/Tests/: CMakeLists.txt  Dockerfile
Firmware/Tests/Src/Application/: shift_controller_tests.cpp
Hardware/STM32F4/: STM32F4_Breakout.kicad_pcb  STM32F4_Breakout.kicad_prl  STM32F4_Breakout.kicad_pro  STM32F4_Breakout.kicad_sch
Hardware/STM32F4/2nd Revision/: STM32F4_Breakout.kicad_pcb  STM32F4_Breakout.kicad_pro  STM32F4_Breakout.kicad_sch
